[gd_scene load_steps=17 format=3 uid="uid://do17dytir1pc"]

[ext_resource type="Script" uid="uid://baqtpywl1x6w4" path="res://ScenarioScript/MotorRoomSS/MotorInterface.gd" id="1_100eg"]
[ext_resource type="Texture2D" uid="uid://capk6sn3wnl50" path="res://Assets/Scenarios/GroundFloor/MotorRoomBackground.png" id="2_xox8k"]
[ext_resource type="Texture2D" uid="uid://desdyamfkapro" path="res://Assets/Indication/BackArrow.png" id="3_ccls0"]
[ext_resource type="Texture2D" uid="uid://bh4yn1pnuv6od" path="res://Assets/Indication/ForwardArrow.png" id="4_4cv53"]
[ext_resource type="AudioStream" uid="uid://78y16c5v7gj3" path="res://Assets/Music/Floor/Stairs/MetalStairs.mp3" id="4_y4ulc"]
[ext_resource type="Texture2D" uid="uid://cflq7sjpd2vw7" path="res://Assets/Items/Valve.png" id="5_2gytm"]
[ext_resource type="Texture2D" uid="uid://dh7y8qlikhq5n" path="res://Assets/Items/PullCord.png" id="6_ce6qy"]
[ext_resource type="AudioStream" uid="uid://bqskgpv5jw0ws" path="res://Assets/Music/Ambience/Item/OpenValve.mp3" id="7_o7jxb"]
[ext_resource type="AudioStream" uid="uid://c3m22t5hywwmv" path="res://Assets/Music/Ambience/Item/CloseValve.mp3" id="8_0tvcy"]
[ext_resource type="AudioStream" uid="uid://bryl0a6g5nxo5" path="res://Assets/Music/Ambience/Item/PullCord.mp3" id="9_4cv53"]
[ext_resource type="AudioStream" uid="uid://bsbmon28o7on1" path="res://Assets/Music/Ambience/Item/MotorNoise.mp3" id="10_0tvcy"]
[ext_resource type="AudioStream" uid="uid://cdyv5o85a4bgk" path="res://Assets/Music/Floor/Walking/WalkingMetal.mp3" id="12_6lhk1"]

[sub_resource type="Animation" id="Animation_i8wxg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_23miv"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sr8l0"]
resource_name = "transtion_bedroom"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m8fs0"]
_data = {
&"RESET": SubResource("Animation_i8wxg"),
&"fade_in": SubResource("Animation_23miv"),
&"transtion_bedroom": SubResource("Animation_sr8l0")
}

[node name="MotorInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_100eg")

[node name="MotorBackground" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -11.0
offset_right = 1217.0
offset_bottom = 718.0
texture = ExtResource("2_xox8k")
expand_mode = 1

[node name="Exit" type="Sprite2D" parent="."]
position = Vector2(582, 593)
scale = Vector2(0.098090254, 0.10937501)
texture = ExtResource("3_ccls0")

[node name="Enter" type="Sprite2D" parent="."]
position = Vector2(597, 383)
scale = Vector2(0.050347224, 0.049107112)
texture = ExtResource("4_4cv53")

[node name="EnterStairs" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 543.0
offset_right = 655.0
offset_bottom = 646.0

[node name="TransStairs" type="Button" parent="EnterStairs"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 103)
layout_mode = 2

[node name="EnterBig" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 256.0
offset_right = 660.0
offset_bottom = 412.0

[node name="TransBig" type="Button" parent="EnterBig"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 156)
layout_mode = 2

[node name="RotationAction" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 821.0
offset_top = 382.0
offset_right = 858.0
offset_bottom = 424.0

[node name="PullAction" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 315.0
offset_top = 381.0
offset_right = 396.0
offset_bottom = 439.0

[node name="Valve" type="Sprite2D" parent="."]
position = Vector2(839, 403.00003)
scale = Vector2(0.054199267, 0.048461895)
texture = ExtResource("5_2gytm")

[node name="PullCord" type="Sprite2D" parent="."]
position = Vector2(361.00003, 408.99997)
rotation = -1.5707964
scale = Vector2(0.04759842, 0.051283654)
texture = ExtResource("6_ce6qy")

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 649.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationFade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_m8fs0")
}

[node name="MetalStairs" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y4ulc")

[node name="TurnOnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o7jxb")
volume_db = -10.0

[node name="TurnOffSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0tvcy")
volume_db = -10.0

[node name="PullSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4cv53")

[node name="MotorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0tvcy")
volume_db = -10.0

[node name="MetalWalking" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_6lhk1")
volume_db = 15.0

[connection signal="pressed" from="EnterStairs/TransStairs" to="." method="_on_trans_stairs_pressed"]
[connection signal="pressed" from="EnterBig/TransBig" to="." method="_on_trans_big_pressed"]
